--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@leenguyen/react-flip-clock-countdown": "^1.6.0",
     "bootstrap": "^5.3.3",
     "date-fns": "^4.1.0",
     "moment": "^2.30.1",
     "next": "15.1.2",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.7",
+    "react-confetti": "^6.2.2",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
