--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.7",
     "react-confetti": "^6.2.2",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-pro-sidebar": "^1.1.0",
+    "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
