--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^2.10.7",
     "react-confetti": "^6.2.2",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^7.1.1"
   },
