--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@leenguyen/react-flip-clock-countdown": "^1.6.0",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "date-fns": "^4.1.0",
     "moment": "^2.30.1",
     "next": "15.1.2",
@@ -19,14 +20,15 @@
     "react-confetti": "^6.2.2",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
-    "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/bootstrap": "^5.2.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.1.2",
     "typescript": "^5"
