--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "date-fns": "^4.1.0",
+    "jquery": "^3.7.1",
     "moment": "^2.30.1",
     "next": "15.1.2",
+    "popper.js": "^1.16.1",
     "react": "^19.0.0",
-    "react-bootstrap": "^2.10.7",
+    "react-bootstrap": "^2.10.9",
     "react-confetti": "^6.2.2",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
