--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-confetti": "^6.2.2",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.1"
+    "react-router-dom": "^7.1.1",
+    "uikit": "^3.23.11"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
