--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
   },
   "dependencies": {
     "@leenguyen/react-flip-clock-countdown": "^1.6.0",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/postcss": "^4.1.12",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "jquery": "^3.7.1",
+    "lucide-react": "^0.542.0",
     "moment": "^2.30.1",
     "next": "15.1.2",
     "popper.js": "^1.16.1",
+    "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-confetti": "^6.2.2",
@@ -24,6 +30,8 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "sass": "^1.89.2",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.12",
     "uikit": "^3.23.11"
   },
   "devDependencies": {
@@ -35,6 +43,7 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.1.2",
+    "tw-animate-css": "^1.3.7",
     "typescript": "^5"
   }
 }
