--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   },
   "dependencies": {
     "@leenguyen/react-flip-clock-countdown": "^1.6.0",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@tailwindcss/postcss": "^4.1.12",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
@@ -20,7 +24,7 @@
     "jquery": "^3.7.1",
     "lucide-react": "^0.542.0",
     "moment": "^2.30.1",
-    "next": "15.1.2",
+    "next": "^15.5.2",
     "popper.js": "^1.16.1",
     "postcss": "^8.5.6",
     "react": "^19.0.0",
@@ -32,7 +36,7 @@
     "sass": "^1.89.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12",
-    "uikit": "^3.23.11"
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
