--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "lucide-react": "^0.542.0",
     "moment": "^2.30.1",
     "next": "^15.5.2",
+    "next-themes": "^0.4.6",
     "popper.js": "^1.16.1",
     "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-confetti": "^6.2.2",
     "react-dom": "^19.0.0",
+    "react-full-screen": "^1.1.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "sass": "^1.89.2",
