--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "sass": "^1.89.2",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12",
     "vaul": "^1.1.2"
